--- a/mobile/src/main/res/drawable/custom_button.xml
+++ b/mobile/src/main/res/drawable/custom_button.xml
@@ -1,9 +1,23 @@
 <!--TODO:fix this button style code to display proper color -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#56abe8"
-        android:state_pressed="true" />
-    <item android:color="#1d4970"
-        android:state_focused="true" />
-    <item android:color="#d7dbd8" />
+
+    <item android:state_pressed="true"
+        android:drawable="@color/lesPitonneuxTransparentPurple"
+         />
+    <item android:state_selected="true"
+        android:drawable="@color/custom_dark_blue"
+         />
+    <item
+        android:state_focused="true"
+        android:state_enabled="true"
+        android:drawable="@color/lesPitonneuxDarkPurple" />
+
+    <item
+        android:state_enabled="true"
+        android:drawable="@color/custom_light_blue" />
+    <item
+        android:drawable="@color/custom_light_grey" />
+
+
 </selector>
