fixed my ViewPager and added new xml file

--- a/mobile/src/main/res/layout/activity_test.xml
+++ b/mobile/src/main/res/layout/activity_test.xml
@@ -16,7 +16,6 @@
         app:menu="@menu/menu_bottom_navigation"
         app:itemBackground="@android:color/holo_purple"
         app:itemIconTint="@android:color/holo_green_light"
-        app:itemTextColor="@android:color/holo_green_light"
-        />
+        app:itemTextColor="@android:color/holo_green_light" />
 
 </RelativeLayout>
