--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -21,8 +21,17 @@
         <item name="android:textColorPrimary">@android:color/holo_green_light</item>
         <item name="colorButtonNormal">@color/custom_light_grey</item>
         <item name="colorControlHighlight">@color/lesPitonneuxTransparentPurple</item>
+        <item name="actionBarStyle">@style/LesPitonneuxAppBarStyle</item>
        <!-- <item name="buttonStyle">@style/lesPitonneuxButtonStyle</item>-->
 
+    </style>
+
+
+
+    <!-- App bar style -->
+    <style name="LesPitonneuxAppBarStyle" parent="style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <!-- Remove the shadow below the app bar -->
+        <item name="elevation">0dp</item>
     </style>
 
 
