--- a/mobile/src/main/res/layout/resource_fragment.xml
+++ b/mobile/src/main/res/layout/resource_fragment.xml
@@ -9,8 +9,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-
     <!--this is the tab layout view -->
     <android.support.design.widget.TabLayout
         android:id="@+id/resource_tab_layout"
@@ -20,10 +18,19 @@
         app:tabTextColor="@android:color/white"
         app:tabSelectedTextColor="@android:color/holo_green_light"
         app:tabIndicatorColor="@android:color/holo_green_light"
-        app:tabMode="fixed"
-        android:elevation="0dp" />
+        app:tabMode="fixed" />
     <!-- what s tabMode fixed?????? -->
-    <!-- TODO: action bar Style verify for elevation -->
+
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/resource_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <!-- inside the ViewPager it is important to set the heigth to wrap content to see the fragment words?? -->
+
+
 
 
 
