--- a/mobile/src/main/res/menu/menu_bottom_navigation.xml
+++ b/mobile/src/main/res/menu/menu_bottom_navigation.xml
@@ -6,26 +6,28 @@
         android:id="@+id/action_news_feeds"
         android:enabled="true"
         android:icon="@drawable/ic_inbox_black_24dp"
-        android:title="NewsFeed"
+        android:title=""
         app:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/action_calendar"
         android:enabled="true"
         android:icon="@drawable/ic_date_range_black_24dp"
-        android:title="Calendar"
+        android:title=""
         app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_code_support"
         android:enabled="true"
         android:icon="@drawable/ic_code_black_24dp"
-        android:title="CodeSupport"
+        android:title=""
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_resources"
         android:enabled="true"
         android:icon="@drawable/ic_device_hub_black_24dp"
-        android:title="Resources"
+        android:title=""
         app:showAsAction="collapseActionView" />
 
 
