--- a/mobile/src/main/res/layout/list_item.xml
+++ b/mobile/src/main/res/layout/list_item.xml
@@ -11,16 +11,18 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
+<!--gravity top-->
         <TextView
+            android:id="@+id/day_text_view"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textSize="50sp"
-            android:gravity="center_vertical"
+            android:gravity="top"
             tool:text="24"/>
 
         <TextView
+            android:id="@+id/month_text_view"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
