--- a/mobile/src/main/res/menu/menu_bottom_navigation.xml
+++ b/mobile/src/main/res/menu/menu_bottom_navigation.xml
@@ -7,7 +7,7 @@
         android:enabled="true"
         android:icon="@drawable/ic_inbox_black_24dp"
         android:title=""
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_calendar"
@@ -21,14 +21,16 @@
         android:enabled="true"
         android:icon="@drawable/ic_code_black_24dp"
         android:title=""
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        android:layout_marginTop="100dp"/>
 
     <item
         android:id="@+id/action_resources"
         android:enabled="true"
         android:icon="@drawable/ic_device_hub_black_24dp"
         android:title=""
-        app:showAsAction="collapseActionView" />
+        app:showAsAction="collapseActionView"
+        />
 
 
 </menu>
