--- a/mobile/src/main/res/layout/add_user_info_activity.xml
+++ b/mobile/src/main/res/layout/add_user_info_activity.xml
@@ -3,6 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.design.widget.TextInputLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
 
     <EditText
         android:layout_width="match_parent"
@@ -11,6 +14,12 @@
         android:hint="programming language"
         android:layout_margin="10dp"/>
 
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,8 +27,7 @@
         android:hint="git"
         android:layout_margin="10dp"/>
 
-
-
+    </android.support.design.widget.TextInputLayout>
 
 
 </LinearLayout>
