--- a/mobile/src/main/res/layout/activity_detail.xml
+++ b/mobile/src/main/res/layout/activity_detail.xml
@@ -2,11 +2,13 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/lesPitonneuxTransparentBlack">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="256dp">
+        android:layout_height="256dp"
+        android:background="@color/custom_light_blue">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
