--- a/mobile/src/main/res/menu/menu_bottom_navigation.xml
+++ b/mobile/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--TODO:remove the space below the each icon-->
     <item
         android:id="@+id/action_news_feeds"
         android:enabled="true"
