--- a/mobile/src/main/res/values-v21/styles.xml
+++ b/mobile/src/main/res/values-v21/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="LesPitonneuxTheme" parent="Theme.AppCompat.Light">
+    <style name="LesPitonneuxTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@android:color/holo_purple</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -12,8 +12,14 @@
         <item name="android:navigationBarColor">@color/lesPitonneuxPurpleLight</item>
         <item name="colorControlHighlight">@color/lesPitonneuxTransparentPurple</item>
         <item name="actionBarStyle">@style/LesPitonneuxAppBarStyle</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <!-- <item name="buttonStyle">@style/lesPitonneuxButtonStyle</item>-->
 
+    </style>
+
+    <!--drawer toggle icon color-->
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@android:color/holo_green_light</item>
     </style>
 
 
