major code changes, code sketches, added files and layouts

--- a/mobile/src/main/res/layout/add_user_info_activity.xml
+++ b/mobile/src/main/res/layout/add_user_info_activity.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<!--TODO: arrange this layout for user sign in-->
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.design.widget.TextInputLayout
@@ -28,6 +31,11 @@
         android:layout_margin="10dp"/>
 
     </android.support.design.widget.TextInputLayout>
+
+   <!-- <Spinner
+        android:id="@+id/spinner_programming_language"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content" />-->
 
 
 </LinearLayout>
