--- a/mobile/src/main/res/layout/activity_detail.xml
+++ b/mobile/src/main/res/layout/activity_detail.xml
@@ -3,21 +3,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/lesPitonneuxTransparentBlack">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- AppBarLayout is a wrapper for a Toolbar in order to apply scrolling effects. -->
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="256dp"
-        android:background="@color/custom_light_blue">
+        android:background="@android:color/white">
 
+
+<!--app:contentScrim="?attr/colorPrimary": make the  image invisible while scrolling-->
         <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:contentScrim="?attr/colorPrimary"
+            app:titleEnabled="false">
+            <!--app:titleEnabled="false": disable animation using with getSupportActionBar.setTitle();-->
 
+            <!--tools:src -> example image to show on preview-->
             <ImageView
+                android:id="@+id/logo_image"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                tools:src="@drawable/digi_lab"
+                app:layout_collapseMode="parallax"/>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin" />
+
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -32,7 +52,8 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:background="@color/custom_light_grey">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,37 +64,27 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                >
+                android:layout_margin="16dp"
+                app:contentPadding="8dp"
+                app:cardCornerRadius="8dp">
 
                 <LinearLayout
 
-                   android:orientation="vertical"
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Info"
+                        android:text="Description"
+                        android:fontFamily="sans-serif-light"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                     <TextView
+                        android:id="@+id/description"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="gsdfgsdgfdgsfdkjjklkljklj;lj;lkjljlkjlkjlkjl;jjkj;lkjlkjlkjlkjlkjlkjlkjlkjlkjlkjlkjlkjlkj;lkj;ljlkjjljlkgjlskjglfkdjlgskdflsokdjf  slfd gs; sdfg
-                        dfgsfdgsdjlskjd g
-                        fdg skdfjdskl gs
-                        sfgs lfgslkjdg
-                        sdfgsdkljdskljlfjsdlg
-                        sfdg dskjsjd
-                        sdfsjlkdgslj
-                        dfsgsjldjfg
-                        dfsklgsjlkjfd
-                        dfskgsljgf
-                        gsdflgksjlgs" />
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
@@ -84,7 +95,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp">
+                android:layout_marginRight="16dp"
+                app:contentPadding="8dp"
+                app:cardCornerRadius="8dp">
 
                 <LinearLayout
 
@@ -95,23 +108,11 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Friends"
+                        android:text="Contact"
+                        android:fontFamily="sans-serif-light"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="gsdfgsdgfdgsfdkjjklkljklj;lj;lkjljlkjlkjlkjl;jjkj;lkjlkjlkjlkjlkjlkjlkjlkjlkjlkjlkjlkjlkj;lkj;ljlkjjljlkgjlskjglfkdjlgskdflsokdjf  slfd gs; sdfg
-                        dfgsfdgsdjlskjd g
-                        fdg skdfjdskl gs
-                        sfgs lfgslkjdg
-                        sdfgsdkljdskljlfjsdlg
-                        sfdg dskjsjd
-                        sdfsjlkdgslj
-                        dfsgsjldjfg
-                        dfsklgsjlkjfd
-                        dfskgsljgf
-                        gsdflgksjlgs" />
+                    <include layout="@layout/include_contact_info_view"/>
 
                 </LinearLayout>
 
@@ -122,7 +123,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp">
+                android:layout_marginRight="16dp"
+                app:contentPadding="8dp"
+                app:cardCornerRadius="8dp">
 
                 <LinearLayout
 
@@ -133,23 +136,14 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Related"
+                        android:text="Message"
+                        android:fontFamily="sans-serif-light"
                         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
                     <TextView
+                        android:id="@+id/message"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="gsdfgsdgfdgsfdkjjklkljklj;lj;lkjljlkjlkjlkjl;jjkj;lkjlkjlkjlkjlkjlkjlkjlkjlkjlkjlkjlkjlkj;lkj;ljlkjjljlkgjlskjglfkdjlgskdflsokdjf  slfd gs; sdfg
-                        dfgsfdgsdjlskjd g
-                        fdg skdfjdskl gs
-                        sfgs lfgslkjdg
-                        sdfgsdkljdskljlfjsdlg
-                        sfdg dskjsjd
-                        sdfsjlkdgslj
-                        dfsgsjldjfg
-                        dfsklgsjlkjfd
-                        dfskgsljgf
-                        gsdflgksjlgs" />
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
@@ -165,17 +159,15 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+    <android.support.design.widget.FloatingActionButton
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:tint="@android:color/white"
+        app:layout_anchor="@id/app_bar_layout"
+        app:layout_anchorGravity="bottom|right|end"
+        android:src="@drawable/ic_share_black_24dp"
+        android:layout_margin="16dp"
+        android:clickable="true"/>
 
 
 
