--- a/mobile/src/main/res/layout/activity_test.xml
+++ b/mobile/src/main/res/layout/activity_test.xml
@@ -35,6 +35,8 @@
             android:layout_gravity="start"
             app:headerLayout="@layout/drawer_header_layout"
             app:menu="@menu/menu_navigation_drawer"
+            app:itemIconTint="@android:color/black"
+            app:itemTextColor="@android:color/black"
 
             />
 
