--- a/mobile/src/main/res/layout/list_item.xml
+++ b/mobile/src/main/res/layout/list_item.xml
@@ -36,12 +36,16 @@
         android:id="@+id/main_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:padding="8dp"
         tool:src="@mipmap/ic_launcher" />
 
+    <!--TODO: arrange layout padding-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp">
 
         <TextView
             android:id="@+id/header_text_view"
