--- a/mobile/src/main/res/values-v21/styles.xml
+++ b/mobile/src/main/res/values-v21/styles.xml
@@ -13,6 +13,7 @@
         <item name="colorControlHighlight">@color/lesPitonneuxTransparentPurple</item>
         <item name="actionBarStyle">@style/LesPitonneuxAppBarStyle</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="android:textColorSecondary">@android:color/holo_green_light</item>
         <!-- <item name="buttonStyle">@style/lesPitonneuxButtonStyle</item>-->
 
     </style>
