--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -23,6 +23,9 @@
         <item name="colorControlHighlight">@color/lesPitonneuxTransparentPurple</item>
         <item name="actionBarStyle">@style/LesPitonneuxAppBarStyle</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="android:textColorSecondary">@android:color/holo_green_light</item>
+
+        <!--TODO: to test <item name="android:colorControlNormal"></item>-->
        <!-- <item name="buttonStyle">@style/lesPitonneuxButtonStyle</item>-->
 
     </style>
