--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,63 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical">
+
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize" />
+
+    <!--
+    //this attributes set it over the action bar: android:fitsSystemWindows="true",
+    //if theme is not set to NoActionBar
+   -->
+<android.support.v4.widget.DrawerLayout
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:openDrawer="start">
 
 
-
-
-
-
-    <!--
-     TODO: this attributes set it over the action bar: android:fitsSystemWindows="true",
-     TODO: if theme is not set to NoActionBar
-    -->
-
-
-    <RelativeLayout
+    <!--TODO: verify  to see if we can scroll with our populated item-->
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize" />
-
-        <!--here we need a relative layout to place the bottom view to parent bottom-->
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_below="@+id/toolbar"
-            android:layout_above="@+id/bottom_navigation"
-            android:layout_height="match_parent">
+        android:orientation="vertical"
+        android:id="@+id/container">
 
 
-        </FrameLayout>
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-
-
+            android:layout_gravity="bottom"
             app:itemBackground="@android:color/holo_purple"
             app:itemIconTint="@android:color/holo_green_light"
             app:itemTextColor="@android:color/holo_green_light"
             app:menu="@menu/menu_bottom_navigation" />
 
-    </RelativeLayout>
+    </FrameLayout>
 
 
 
@@ -73,3 +62,5 @@
 
         />
 </android.support.v4.widget.DrawerLayout>
+
+</LinearLayout>
